<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activity.CountryWiseActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_countrywise_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/pull_down_refresh"
            android:src="@drawable/back_btn" />

        <ImageView
            android:id="@+id/img_countrywise_refresh"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/img_countrywise_back"
            android:background="@android:color/transparent"
            android:contentDescription="@string/pull_down_refresh"
            android:src="@drawable/refresh" />

        <Switch
            android:id="@+id/countrywise_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/img_countrywise_refresh"
            android:checked="false"
            android:switchPadding="10dp"
            android:text="@string/show_fatalcase" />

    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/countrywise_horizontal_scroll"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#ECE5D4"
        android:fillViewport="true">


        <LinearLayout
            android:id="@+id/countryWise_linear_layout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sideScroll_conf_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmed_cases"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:scrollHorizontally="true"
                android:layout_gravity="center_vertical"
                android:textColor="#308BE5"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/sideScroll_conf_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center_vertical"
                android:textColor="#040303"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/sideScroll_recov_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovered_cases"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center_vertical"
                android:textColor="#55C35A"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/sideScroll_recov_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center_vertical"
                android:textColor="#040303"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/sideScroll_fatal_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fatal_cases"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center_vertical"
                android:textColor="#DF3939"
                android:textStyle="bold"
                android:textSize="16sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/sideScroll_fatal_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center_vertical"
                android:textColor="#040303"
                android:textStyle="bold"
                android:textSize="16sp"
                android:visibility="gone"/>

        </LinearLayout>

    </HorizontalScrollView>

    <include layout="@layout/progressbar_layout"/>

    <EditText
        android:id="@+id/edtTxt_search"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:background="#D87272"
        android:textStyle="bold"
        android:inputType="textNoSuggestions"
        android:layout_marginEnd="15dp"
        android:hint="@string/edt_hint_province"
        android:autofillHints="" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:scrollbars="vertical"/>

</LinearLayout>